Changelog
=========

1.1 (unreleased)
----------------

- Fixed issue with handlers not allowing new Plone sites to be created.
  [davidjb]
- Add auto complete function to FoR and SEO code.


1.0 (2011-08-03)
----------------

- Added collective.geo configuration import step.
  [David]
- Remove restriction on changing IDs.  This borked plone.app.iterate
  functionality.
  [David]
- Removed additional reference to jcu.theme
  [David]
- Add workflow to our product.  We have a placeful workflow for checkouts
  of Dataset Record content objects.
  [David]
- Changed DB configuration to now be flexible for db-type -- we were using
  only Oracle connection info before.
  [David]
- Add developer documentation to README
  [David]
- Make our content type DAVAware -- this means we can use PUT requests to 
  create our data records.
  [David]
- Add GenericSetup profile to create Collection (Topic) objects for the TDH.
  We use the `structure` (`content`) import to create the basic structure
  and then a custom import step to configure the Collections.
  [David]
- Add more helpful error messages to form on error
  [David]
- Add validators for FoR and SEO code fields.
  [David]
- Render out Point geometry as dcmiPoint.  LineStrings aren't supported
  still.
  [David]
- Add `days_in_past` parameter to the @@rifcs view for Repository to enable
  ANDS (and others?) to retrieve all records by specifying 'all' as the value.
  [David]
- Genericise the RIF-CS views for our data records and the repository to use
  the same view base.
  [David]
- Restrict rifcs view on Repository to Managers and ANDS bots only.
  [David]
- Added jpype decorator method to utils module for invoking the JVM for any
  method the decorator is applied to.
  [David]
- Provide @@rifcs view for the Repository content type so we can now output
  all records for collections (and only show one of each party and activity
  record from the repository)
  [David]