@@ -1,6 +1,7 @@
 import zope.component
 import zope.interface
 import zope.location
+
 from zope.app.pagetemplate.viewpagetemplatefile import ViewPageTemplateFile
 from z3c.form import action, button, interfaces
 from z3c.form.widget import FieldWidget
@@ -9,9 +10,10 @@ from z3c.form.browser.select import SelectWidget
 
 from plone.app.z3cform.templates import RenderWidget
 from plone.formwidget.autocomplete.widget import \
-        AutocompleteMultiSelectionWidget
+        AutocompleteSelectionWidget,AutocompleteMultiSelectionWidget
 
 from collective.z3cform.datagridfield import DataGridField
+
 
 
 class HtmlAttributesRenderWidget(RenderWidget):
@@ -107,4 +109,11 @@ def UnrestrictedAutocompleteMultiFieldWidget(field, request):
     """IFieldWidget factory for custom AutocompleteMultiFieldWidget."""
     return FieldWidget(field, \
                        UnrestrictedAutocompleteSelectionWidget(request))
+
+class PersonAutocompleteSelectionWidget(AutocompleteSelectionWidget):
+    display_template = ViewPageTemplateFile('widget_templates/person_autocomplete_display.pt')
+
+@zope.interface.implementer(interfaces.IFieldWidget)
+def PersonAutocompleteFieldWidget(field, request):
+    return FieldWidget(field, PersonAutocompleteSelectionWidget(request))
 
